feat: added a profile section

--- a/index.html
+++ b/index.html
@@ -4,10 +4,71 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="icon" href="assets/image-1.ico">
+    <script src="https://kit.fontawesome.com/80f37aa6d1.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="./src/style.css">
+    <title>CV</title>
 </head>
 <body>
-    <img class="img_page" src="pictures/photo-1.jpg" alt="photo-1">
+   <div class="wrapper">
+    <header class="header">
+        <div class="header__conteiner">
+        <nav class="header_menu">
+            <div class="menu_body">
+                <ul class="menu_list">
+                    <li class="menu_item">
+                        <a href="" class="menu_link">Contacts</a>
+                    </li>
+                    <li class="menu_item">
+                        <a href="" class="menu_link">Summary</a>
+                    </li>
+                    <li class="menu_item">
+                        <a href="" class="menu_link">Skills</a>
+                    </li>
+                    <li class="menu_item">
+                        <a href="" class="menu_link">Code</a>
+                    </li>
+                    <li class="menu_item">
+                        <a href="" class="menu_link">Projects</a>
+                    </li>
+                    <li class="menu_item">
+                        <a href="" class="menu_link">Education</a>
+                    </li>
+                    <li class="menu_item">
+                        <a href="" class="menu_link">English</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <button class="icon-menu" type="button">
+            <span></span>
+        </button>
+        </div>
+    </header>
+    <main class="page" >
+       <section class="profile_page">
+        <div class="profile__conteiner">
+            <div class="profile_image">
+                <div class="image_body">
+                <img src="./assets/image-1.jpg" alt="image-1" class="img_profile">
+            </div>
+            </div>
+            <div class="profile_content">
+                <div class="profile_name">
+                    <h1>Olha  Popova</h1>
+                </div>
+              <div class="profile_vocation">
+                <h2>Junior Front-End Developer</h2>
+              </div>
+            </div>
+        </div>
+       </section>
+    </main>
+    <footer class="footer">footer</footer>
+   </div>
 </body>
 </html>
