feat: added a profile and contacts section

--- a/index.html
+++ b/index.html
@@ -59,14 +59,58 @@
             </div>
             <div class="profile_content">
                 <div class="profile_name">
-                    <h1>Olha  Popova</h1>
+                    <h1 class="title_name">Olha Popova</h1>
                 </div>
               <div class="profile_vocation">
-                <h2>Junior Front-End Developer</h2>
+                <h2>
+                    Junior Front-End Developer  
+                </h2>
               </div>
             </div>
         </div>
        </section>
+       <div class="body_box__conteiner">
+       <section class="contacts_page sections">
+        <div class="contacts_title">
+            <h2 class="title_text">
+                Contacts
+            </h2>
+        </div>
+        <ul class="contacts_list">
+            <li class="contacts_item">
+                <i class="fa-solid fa-location-dot"></i>Odessa, Ukraine
+            </li>
+            <li class="contacts_item">
+                <i class="fa-brands fa-github"></i>Email:
+                <a href="#" class="contacts_link">popovaolga719@gmail.com</a>
+            </li>
+            <li class="contacts_item">
+                <i class="fa-brands fa-discord"></i>Github:
+                <a href="https://github.com/PopovaOlha" class="contacts_link">PopovaOlha</a>
+            </li>
+            <li class="contacts_item">
+                <i class="fa-brands fa-telegram"></i>Telegram:
+                <a href="#" class="contacts_link">@Popovaolga719</a>
+            </li>
+            <li class="contacts_item">
+                <i class="fa-solid fa-envelope"></i>Discord:
+                <a href="#" class="contacts_link">PopovaOlha#2095</a>
+            </li>
+        </ul>
+       </section>
+       <section class="summary_page sections">
+        <div class="summary_title">
+            <h2 class="title_text">
+                Summary
+            </h2>
+        </div>
+        <div class="summary_paragraph">
+            <p>
+                I like programming. It is fascinating and interesting. I have a main job, programming is a hobby for me. I have completed several training projects and now I would like to take part in the creation of a real JavaScript project. My goal is to learn a pure JavaScript at a good level and learn the React library. I will be glad to join the creation of open source projects. I would like to work under the guidance of an experienced developer to gain practical experience. 
+            </p>
+        </div>
+       </section>
+    </div>
     </main>
     <footer class="footer">footer</footer>
    </div>
