feat: added all the sections

--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
                 <i class="fa-solid fa-location-dot"></i>Odessa, Ukraine
             </li>
             <li class="contacts_item">
-                <i class="fa-brands fa-github"></i>Email:
+                <i class="fa-solid fa-envelope"></i>Email:
                 <a href="#" class="contacts_link">popovaolga719@gmail.com</a>
             </li>
             <li class="contacts_item">
-                <i class="fa-brands fa-discord"></i>Github:
+                <i class="fa-brands fa-github"></i>Github:
                 <a href="https://github.com/PopovaOlha" class="contacts_link">PopovaOlha</a>
             </li>
             <li class="contacts_item">
@@ -93,7 +93,7 @@
                 <a href="#" class="contacts_link">@Popovaolga719</a>
             </li>
             <li class="contacts_item">
-                <i class="fa-solid fa-envelope"></i>Discord:
+                <i class="fa-brands fa-discord"></i>Discord:
                 <a href="#" class="contacts_link">PopovaOlha#2095</a>
             </li>
         </ul>
@@ -111,8 +111,120 @@
         </div>
        </section>
     </div>
-    </main>
-    <footer class="footer">footer</footer>
-   </div>
-</body>
-</html>
+    <div class="body_box__conteiner">
+        <section class="skills_page sections">
+            <div class="skills_title">
+                <h2 class="title_text">
+                    Skills
+                </h2>
+            </div>
+            <ul class="skills_list">
+                <li class="skills_item">
+                    Web-development: <span>HTML5, CSS3, JavaScript</span>
+                </li>
+                <li class="skills_item">
+                    Frameworks and libraries: <span>React</span>
+                </li>
+                <li class="skills_item">
+                    Version control: <span>GIT, Github</span>
+                </li>
+                <li class="skills_item">
+                    Graphics: <span>Figma</span>
+                </li>
+            </ul>
+        </section>
+        <section class="code_page sections">
+            <div class="code_title">
+                <h2 class="title_text">
+                    Code
+                </h2>
+            </div>
+            <pre class="pre">
+                function factorial(n) {
+                    if(n < 0) return null;
+                    if (n <= 1) return 1;
+                    return n * factorial(n-1);
+                  }
+                    </pre>
+                     </section>
+                    </div>
+                    <div class="body_box__conteiner">
+                        <section class="courses_page sections">
+                            <div class="courses_title">
+                                <h2 class="title_text">
+                                    Courses
+                                </h2>
+                                <ul class="courses list">
+                                    <li class="courses_item">
+                                        SheCodes - <span>"Web-development"</span>
+                                    </li>
+                                    <li class="courses_item">
+                                        SheCodes - <span>"Responsive Web-development"</span>
+                                    </li>
+                                    <li class="courses_item">
+                                        Go-It - <span>"Full-stack developer"</span>
+                                    </li>
+                                    <li class="courses_item">
+                                        The Rolling Scopes School - <span>"JavaScript/Front-end 2023Q1"</span>
+                                    </li>
+                                </ul>
+                            </div>
+                    </section>
+                    <section class="projects_page sections">
+                        <div class="projects_title">
+                            <h2 class="title_text">
+                                Projects
+                            </h2>
+                        </div>
+                        <ul class="projects_list">
+                            <li class="projects_item">
+                                <a href="https://sparkly-stroopwafel-1b1c8b.netlify.app" target="blank" class="projects_link">Plants project<span class="project_tools">(HTML, CSS, JS)</span></a>
+                            </li>
+                            <li class="projects_item">
+                                <a href="https://animated-chebakia-431d8d.netlify.app" target="blank" class="projects_link">Responsive portfolio<span class="project_tools">(HTML, CSS, Bootstrap)</span></a>
+                            </li>
+                            <li class="projects_item">
+                                <a href="https://incomparable-cuchufli-ed2bbe.netlify.app" target="blank" class="projects_link">Weather App<span class="project_tools">(JS, CSS, HTML)</span></a>
+                            </li>
+                        </ul>
+                    </section>
+                    </div>
+                    <div class="body_box__conteiner">
+                        <section class="education_page sections">
+                            <div class="education_title">
+                                <h2 class="title_text">
+                                    Education
+                                </h2>
+                                <div class="section_content">
+                                    <p>National University "Odessa Maritime Academy"</p>
+                                </div>
+                        </section>
+                                <section class="english_page sections">
+                                    <div class="english_title">
+                                        <h2 class="title_text">
+                                            English
+                                        </h2>
+                                        <div class="english_content">
+                                            <p>
+                                                B1 - Pre-Intermediate
+                                            </p>
+                                        </div>
+                                    </div>
+                                </section>
+                            </div>
+                    </div>
+                </main>
+                <footer class="footer">
+                       <div class="footer_body__conteiner">
+                        <div class="footer_column">
+                           <span class="year">2023</span>
+                        <a href="https://github.com/PopovaOlha" target="blank" class="footer_link">PopovaOlha</a>
+                    </div>
+                    <div class="footer_image">
+                        <img src="./assets/rs_school_js.svg" alt="rs_school_js" class="footer-img">
+                    </div>
+                </div>
+                </footer>
+            <script src="./src/index.js"></script>
+        </body>
+        </html>
