feat: added the adaptive of sections(contacts,summar)

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
    <div class="wrapper">
     <header class="header">
         <div class="header__conteiner">
+            <div class="header_logo">
+                <img class="header_img" src="./assets/log.png" alt="">
+            </div>
         <nav class="header_menu">
             <div class="menu_body">
                 <ul class="menu_list">
